# portal_use

./: .gitignore  PORTAL_USE_PRD.md  README.md  install.sh  portal-use.service  pyproject.toml  server.py  wayland-computer-use-mcp-prd.md
docs/: smoke-test-gnome.md
portal/: capture.py  input.py  session.py
tests/: test_input.py
